feat(kubernetes): 30. Demo - ReplicaSets
- Udemy: Learn Kubernetes in simple, easy and fun way with hands-on coding exercises. For beginners in DevOps.

--- a/kubernetes/pod/nginx.yaml
+++ b/kubernetes/pod/nginx.yaml
@@ -3,7 +3,8 @@ kind: Pod
 metadata:
   name: nginx-2
   labels:
-    env: production
+    app: myapp
+    env: test
 spec:
   containers:
     - name: nginx
