feat(gitignore): comment out Iceberg/Spark study artifacts paths

--- a/.gitignore
+++ b/.gitignore
@@ -57,5 +57,5 @@ wheels/
 *.backup
 
 # Iceberg / Spark study artifacts
-iceberg/warehouse/
-iceberg/notebooks/.ipynb_checkpoints/
+#iceberg/warehouse/
+#iceberg/notebooks/.ipynb_checkpoints/
