feat(iceberg): create table and check work flows of iceberg

--- a/iceberg/docker-compose.yaml
+++ b/iceberg/docker-compose.yaml
@@ -46,6 +46,8 @@ services:
       iceberg_net:
         aliases:
           - warehouse.minio
+    volumes:
+      - ./warehouse:/data
     ports:
       - 9001:9001
       - 9000:9000
